--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [INVEST_API]
-TOKEN=
+TOKEN=t.PXRpihIQNpKpAsjfJcqOLx-aNz4bC-zHUNP1tmkqAtj3qLZghqrEAGdgPbcH8qt_H2MIQoSSZ0olxJLrhzJg0w
 APP_NAME=EIDiamond.invest-bot
 
 [BLOG]
 #0-off / 1-on
 STATUS=1
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
+TELEGRAM_BOT_TOKEN=6142680497:AAEvRU0U4JsDKZ3cGz0COHnxJfKv8XCN2ig
+TELEGRAM_CHAT_ID=833295757
 
 [TRADING_ACCOUNT]
 MIN_LIQUID_PORTFOLIO=9000
